--- a/06_DOM/DOM.html
+++ b/06_DOM/DOM.html
@@ -2,12 +2,24 @@
 <html lang="en">
 <head>
     <title>What's a DOM?</title>
+    <style>
+        .bg-black {
+            background-color: black;
+            color:white;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1>What's a DOM anyway?</h1>
-    </div>
-
+<body class="bg-black">
+        <h1>What's a DOM anyway? <span style='display:none'>This is unreadable</span></h1>
+        <h2>A perception of thoughts</h2>
+        <h3>Can you really say if a concept is conceptual or real?</h3>
+        <input type="password"/>
+        <ul>
+            <l1 class="list-item">One</l1>
+            <l1 class="list-item">Two</l1>
+            <l1 class="list-item">Three</l1>
+            <li class="list-item">Four</li>
+        </ul>
     <!-- Okay brutus, Now we're getting into JS in web
          Let's start with the basic question, What are web pages made of?
             ReactJS? NextJS? Alright, Frameworks I presume?
